navbar alignment issue fixed

--- a/src/Home/Navbar.css
+++ b/src/Home/Navbar.css
@@ -2,6 +2,9 @@
     box-shadow: 5px 10px 15px -5px rgba(0,0,0,0.3);
     
 }
+.navbar-expand-md .navbar-nav{
+    align-items: center;
+}
 .links{
    margin-left:7px!important;
    margin-right:7px!important;
